--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 </head>
 <body>
-	<h1>OK</h1>
-</body>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-1 col-md-3 col-lg-4 text-center bg-primary">DIV1</div>
+			<div class="col-sm-3 col-md-4 col-lg-4 text-center bg-danger">DIV2</div>
+			<div class="col-sm-8 col-md-5 col-lg-4 text-center bg-warning">DIV3</div>
+		</div>
+	</div>
+
+
+	<script type="text/javascript" src="assets/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.bundle.js"></script>
+</body> 
 </html>
